<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        style="@style/doneBtn"
        android:text="@string/download_capk" />

    <Button
        android:id="@+id/readCapkList"
        android:layout_width="match_parent"
        style="@style/doneBtn"
        android:text="@string/read_capk_list" />

    <Button
        android:id="@+id/readCapk"
        android:layout_width="match_parent"
        style="@style/doneBtn"
        android:text="@string/read_capk_point" />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        style="@style/doneBtn"
        android:text="@string/clear_capk" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/textView"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </ScrollView>

</LinearLayout>