<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonscan"
        android:layout_width="match_parent"
        style="@style/doneBtn"
        android:text="@string/search_bluetooth" />

    <Button
        android:id="@+id/isConnect"
        android:layout_width="match_parent"
        style="@style/doneBtn"
        android:text="@string/is_connect" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="match_parent"
        style="@style/doneBtn"
        android:text="@string/disconnect" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:layout_marginTop="8dp">

    </ListView>



</LinearLayout>
