<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_top_bar" />

    <LinearLayout
        android:id="@+id/ll_conn_disc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/isConnect"
            style="@style/doneBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/is_connect" />

        <Button
            android:id="@+id/disconnect"
            style="@style/doneBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/disconnect" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/connect"
            style="@style/doneBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/device_connect" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </ListView>

</LinearLayout>