<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/masterkey_encrypt_type"
                android:textColor="@color/gray"
                android:textSize="16sp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/kek_encrypt_tip"
                android:textColor="@color/red"
                android:textSize="12sp"></TextView>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView1"
                android:layout_margin="10dp"
                android:layout_toRightOf="@+id/textView1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_plainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Plain Text" />

                <RadioButton
                    android:id="@+id/rb_KEK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KEK" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/key_index"
                android:textColor="@color/gray"
                android:textSize="16sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <com.morefun.mpos.reader.sampleDemo.view.ClearEditText
                    android:id="@+id/et_keyIndex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:hint="@string/key_index_tip"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="0"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/key_vlaue"
                android:textColor="@color/gray"
                android:textSize="16sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <com.morefun.mpos.reader.sampleDemo.view.ClearEditText
                    android:id="@+id/et_keyValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext"
                    android:digits="0123456789abcdefABCDEF"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:hint="@string/input_key_tip"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="10dp"
                    android:text="08024FCF811DA67208024FCF811DA672"
                    android:maxLength="32"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/key_kvc"
                android:textColor="@color/gray"
                android:textSize="16sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <com.morefun.mpos.reader.sampleDemo.view.ClearEditText
                    android:id="@+id/et_checkValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext"
                    android:digits="0123456789abcdefABCDEF"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:hint="@string/input_kvc_tip"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="10dp"
                    android:maxLength="8"
                    android:text="82E13665"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                style="@style/doneBtn"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:text="@string/download_master_key" />

            <TextView
                android:id="@+id/textView"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>