<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/key_vlaue"
                android:textColor="@color/gray"
                android:textSize="16sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <com.morefun.mpos.reader.sampleDemo.view.ClearEditText
                    android:id="@+id/et_kekValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:hint="@string/input_key_tip"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="32"
                    android:text="11111111111111111111111111111111"
                    android:digits="0123456789abcdefABCDEF"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/key_kvc"
                android:textColor="@color/gray"
                android:textSize="16sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <com.morefun.mpos.reader.sampleDemo.view.ClearEditText
                    android:id="@+id/et_checkValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:hint="@string/input_kvc_tip"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:digits="0123456789abcdefABCDEF"
                    android:padding="10dp"
                    android:maxLength="8"
                    android:text="82E13665"
                    android:singleLine="true"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_margin="10dp"
                style="@style/doneBtn"
                android:layout_width="match_parent"
                android:text="@string/load_kek" />

            <TextView
                android:id="@+id/textView"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>